<resources>
    <string name="app_name">Forecast</string>
    <string name="temp_data">%d С°</string>
    <string name="unknown_condition">Undef</string>
    <string name="min_temp">Мин. темп.</string>
    <string name="max_temp">Макс. темп.</string>
    <string name="feels_like">Чувствуется как %s</string>
    <string name="hint">Данные предоставлены Yandex.weather Api</string>
    <string name="intro">Прогноз на ближайшее время</string>
    <string name="wind_speed">Скорость ветра %s м/c</string>
    <string name="min_max">Мин. / Макс. температура \n%s / %s</string>
    <string name="pressure_mm">Давление %d мм рт. ст.</string>
    <string name="pressure_mm_data">%d мм рт. ст.</string>
    <string name="temp_hint">Температура</string>
    <string name="feels_like_hint">Ощущается</string>
    <string name="humidity_hint">Влажность</string>
    <string name="pressure_hint">Давление</string>
    <string name="wind_speed_hint">Скорость ветра</string>
    <string name="wind_dir_hint">Направление ветра</string>
    <string name="wind_speed_fact">%s м/c</string>
    <string name="intro_today">Прогноз на настоящее время</string>
    <string name="menu_hint_refresh">Обновить</string>
    <string name="menu_hint_settings">Настройки</string>
    <string name="menu_hint_exit">Выйти</string>
    <string name="sunset_hint">Закат</string>
    <string name="sunrise_hint">Рассвет</string>
    <string name="settings_change">Менять фоновый градиент</string>
    <string name="settings_take">Выбрать стандартный градиент</string>
    <string name="settings_title">Настройки</string>
    <string name="send_message">Прогноз | %s</string>
    <string name="do_send">Высылать уведомления</string>
</resources>