<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/temp_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/navigo_medium"
            android:textColor="@color/sky_font"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/temp_hint"
            app:layout_constraintTop_toBottomOf="@+id/temp_hint" />

        <TextView
            android:id="@+id/wind_speed_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/navigo_medium"
            android:textColor="@color/sky_font"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/wind_speed_hint"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_hint" />

        <TextView
            android:id="@+id/wind_dir_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/navigo_medium"
            android:textColor="@color/sky_font"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/wind_dir_hint"
            app:layout_constraintTop_toBottomOf="@+id/wind_dir_hint" />

        <TextView
            android:id="@+id/feels_like_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/navigo_medium"
            android:textColor="@color/sky_font"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/feels_like_hint"
            app:layout_constraintTop_toBottomOf="@+id/feels_like_hint" />

        <TextView
            android:id="@+id/temp_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:alpha="0.7"
            android:fontFamily="@font/navigo_medium"
            android:text="@string/temp_hint"
            android:textColor="@color/sky_font"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wind_speed_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.7"
            android:fontFamily="@font/navigo_medium"
            android:text="@string/wind_speed_hint"
            android:textColor="@color/sky_font"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/temp_hint"
            app:layout_constraintTop_toBottomOf="@+id/temp_fact" />

        <TextView
            android:id="@+id/wind_dir_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:alpha="0.7"
            android:fontFamily="@font/navigo_medium"
            android:text="@string/wind_dir_hint"
            android:textColor="@color/sky_font"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/wind_speed_hint"
            app:layout_constraintTop_toTopOf="@+id/wind_speed_hint" />

        <TextView
            android:id="@+id/feels_like_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/navigo_medium"
            android:text="@string/feels_like_hint"
            android:textColor="@color/sky_font"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/wind_dir_hint"
            app:layout_constraintTop_toTopOf="@+id/temp_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>