<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/navigo_bold"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/settings_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="13dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_edit"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="17sp"
                android:autoSizeMinTextSize="16sp"
                android:fontFamily="@font/navigo_regular"
                android:padding="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_change"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="13dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:track="@drawable/switch_track"
                app:trackTintMode="screen"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_send"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="17sp"
            android:autoSizeMinTextSize="16sp"
            android:fontFamily="@font/navigo_regular"
            android:padding="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/do_send"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="13dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/send_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:track="@drawable/switch_track"
            app:trackTintMode="screen" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_group"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:autoSizeMaxTextSize="17sp"
                android:autoSizeMinTextSize="16sp"
                android:fontFamily="@font/navigo_regular"
                android:padding="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:text="@string/settings_take"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="13dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginEnd="24dp"
            android:elevation="10dp">

        <ImageView
            android:id="@+id/grad_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginEnd="24dp"
            android:elevation="10dp">

        <ImageView
            android:id="@+id/grad_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="16dp"
            android:elevation="10dp">

        <ImageView
            android:id="@+id/grad_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:elevation="10dp">

        <ImageView
            android:id="@+id/grad_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>